--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ go:
 - 1.11.x
 - 1.12.x
 
+go_import_path: github.com/kennykarnama/theysaidsogo
+
 before_install:
   - go get -v golang.org/x/lint/golint
   - go get -v github.com/stretchr/testify
