Import path on travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ go:
 - 1.11.x
 - 1.12.x
 
-go_import_path: github.com/kennykarnama/theysaidsogo
+go_import_path: 
+  - github.com/kennykarnama/theysaidsogo
+  - github.com/kennykarnama/theysaidsogo/client
+  - github.com/kennykarnama/theysaidsogo/config
+  - github.com/kennykarnama/theysaidsogo/model
 
 before_install:
   - go get -v golang.org/x/lint/golint
